# programming

./: ai_coding_cheat_sheet.md  commit-all-repos.sh  programming_antigravity.code-workspace
.cursor/rules/: multi-repo-git.mdc
General Guides/agentic_ai_reference/: agentic-coding-pricing.html  ai_coding_cheat_sheet.md  langgraph_architectural_matrix.md  mcp_architectural_matrix.md  memory_guide.md
General Guides/cpp_reference/: LEMON_SETUP.md  OFFLINE_CPP_REFERENCE.md  QT_UI_SETUP.md
General Guides/docker_reference/docs/: docker_complete_guide.md
General Guides/networking_reference/: kali_security_tools_guide.md  network_security_guide.md
General Guides/resume_interview/: INTERVIEW_REVISION_SUMMARY.md  generate_cv_pdfs.py  sandipan_ghosh_full_cv.md  sandipan_ghosh_one_sheet.md
vlsi/: Makefile
vlsi/agent/: README.md  main.py  pyproject.toml  server.py  test.def  test_system.py
vlsi/agent/klayout_macro/: chatbot_dock.py  viewer_client.py
vlsi/agent/src/hea/icc2/: hea_loader.tcl
vlsi/agent/src/hea/klayout/: hea_loader.py
vlsi/agent/src/hea/virtuoso/: hea_loader.skill
vlsi/agent/src/orchestrator/: __init__.py  eu_compiler.py  orchestrator_graph.py  python_repl.py  router_subgraph.py  script_synthesis.py  tracing.py
vlsi/agent/src/orchestrator/drc/: __init__.py  drc_script_gen.py  klayout_client.py  rdb_parser.py
vlsi/agent/src/orchestrator/eu_registry/: manifest.json
vlsi/agent/src/orchestrator/eu_registry/cadence_virtuoso/: extract_tech_rules.skill.j2  extract_via_tech.skill.j2  place_cells.skill.j2  route_nets.skill.j2
vlsi/agent/src/orchestrator/eu_registry/klayout/: zoom_and_highlight.py.j2
vlsi/agent/src/orchestrator/eu_registry/synopsys_icc2/: extract_tech_rules.tcl.j2  extract_via_tech.tcl.j2  route_nets.tcl.j2
vlsi/agent/src/orchestrator/modules/: __init__.py  _cli_client.py  _hea_client.py  m1_router_subgraph.py  m2_placer_subgraph.py  m3_db_subgraph.py  m4_window_subgraph.py
vlsi/agent/src/orchestrator/policy/: __init__.py  layer_router.py  static_tool_map.py
vlsi/agent/src/orchestrator/rag/: __init__.py  embeddings.py  ingestor.py  rag_service.py
vlsi/agent/src/orchestrator/rag/stubs/: klayout_stubs.py
vlsi/agent/src/orchestrator/utils/: __init__.py  constraints_mcp_client.py  early_router.py  env_bootstrap.py  spice_to_analog_problem.py
vlsi/agent/src/orchestrator/workflows/: __init__.py  w1_full_route_flow.py  w2_drc_fix_loop.py
vlsi/agent/tests/hea/: test_eus.py  test_hea_conformance.py
vlsi/data/eda_data/netlists/: analog_synth_cascode_mirror.sp  (+13 more)
vlsi/docker/: Dockerfile  docker-compose.yml
vlsi/docker/klayout/: Dockerfile  drc_runner.sh  klayout_server.py  start-klayout-vnc.sh
vlsi/docker/scripts/: healthcheck.sh  init_rag.sh
vlsi/docs/: RAG_DOCKER_MEMO.md  architecture.md  chatbot_howto.md  implementation.md
vlsi/docs/agent/: ARCHITECTURE.md  EXECUTION_ORDER.md  README.md
vlsi/eda_tools/eda_cli/: CMakeLists.txt  README.md
vlsi/eda_tools/eda_cli/include/eda_cli/: eda_daemon.hpp  shared_database.hpp
vlsi/eda_tools/eda_cli/src/: eda_daemon.cpp  main.cpp
vlsi/eda_tools/eda_placer/: CMakeLists.txt
vlsi/eda_tools/eda_placer/include/eda_placer/: analog_placer.hpp  analog_problem.hpp  analytical_placer.hpp
vlsi/eda_tools/eda_placer/src/: analog_placer.cpp  analytical_placer.cpp
vlsi/eda_tools/eda_placer/tests/: test_analog_placer.cpp
vlsi/eda_tools/eda_router/: CMakeLists.txt  Makefile  README.md
vlsi/eda_tools/eda_router/docs/: architecture_v3.md
vlsi/eda_tools/eda_router/include/eda_router/: binary_delta_writer.h  oasis_writer.h  shared_database.hpp  types.hpp
vlsi/eda_tools/eda_router/include/eda_router/io/: def_design_loader.hpp
vlsi/eda_tools/eda_router/include/eda_router/mcp/servers/: db_mcp_server.hpp  placer_mcp_server.hpp  routing_mcp_server.hpp
vlsi/eda_tools/eda_router/include/eda_router/transport/: websocket_transport.hpp
vlsi/eda_tools/eda_router/include/routing_genetic_astar/: grid_graph.hpp  routing_pipeline.hpp  shared_database.hpp  types.hpp  via_expander.h
vlsi/eda_tools/eda_router/include/routing_genetic_astar/analysis/: congestion_oracle.hpp  context_classifier.hpp  design_analyzer.hpp  pin_access_oracle.hpp
vlsi/eda_tools/eda_router/include/routing_genetic_astar/constraints/: drc_penalty_model.hpp  electrical_constraint_engine.hpp
vlsi/eda_tools/eda_router/include/routing_genetic_astar/convergence/: convergence_monitor.hpp  ilp_solver.hpp
vlsi/eda_tools/eda_router/include/routing_genetic_astar/core/: detailed_grid_router.hpp  history_cost_updater.hpp  negotiated_routing_loop.hpp
vlsi/eda_tools/eda_router/include/routing_genetic_astar/eco/: eco_router.hpp
vlsi/eda_tools/eda_router/include/routing_genetic_astar/evaluation/: adaptive_penalty_controller.hpp  optuna_tuner.hpp  route_evaluator.hpp
vlsi/eda_tools/eda_router/include/routing_genetic_astar/io/: def_design_loader.hpp
vlsi/eda_tools/eda_router/include/routing_genetic_astar/mcp/servers/: db_mcp_server.hpp  placer_mcp_server.hpp  routing_mcp_server.hpp
vlsi/eda_tools/eda_router/include/routing_genetic_astar/planner/: corridor_refinement.hpp  global_planner.hpp  grid_fill.hpp  grid_fill_impl.hpp
vlsi/eda_tools/eda_router/include/routing_genetic_astar/routing/: cross_region_mediator.hpp  spatial_partitioner.hpp  spine_fishbone_router.hpp  strategy_composer.hpp  tree_router.hpp
vlsi/eda_tools/eda_router/include/routing_genetic_astar/threading/: thread_manager.hpp
vlsi/eda_tools/eda_router/include/routing_genetic_astar/transport/: websocket_transport.hpp
vlsi/eda_tools/eda_router/python/: README.md
vlsi/eda_tools/eda_router/src/: binary_delta_writer.cpp  main.cpp  oasis_writer.cpp  routing_pipeline.cpp  via_expander.cpp  vlsi_daemon.cpp
vlsi/eda_tools/eda_router/src/io/: def_design_loader.cpp
vlsi/eda_tools/eda_router/src/planner/: grid_fill.cpp
vlsi/eda_tools/eda_router/tests/: smoke_test.sh  test_convergence_monitor.cpp  test_design_analyzer.cpp  test_detailed_grid_router.cpp  test_global_planner.cpp  test_grid_graph.cpp  test_strategy_composer.cpp
vlsi/scripts/: run_daemon_stack.sh
(+5 files in other folders)
