[project]
name = "vlsi-agent"
version = "1.0.0"
description = "LangGraph-based VLSI EDA orchestration agent — KLayout chatbot + multi-module C++ backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ── HTTP server (chatbot API endpoint) ────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn>=0.29.0",

    # ── LangGraph + LangChain (orchestrator + module subgraphs) ──────────────
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",

    # ── Environment + config ──────────────────────────────────────────────────
    "python-dotenv>=1.0.0",

    # ── WebSocket client (MCP calls from Python to the C++ EDA daemon) ───────
    # All module subgraphs call the C++ daemon via WebSocket JSON-RPC.
    # _cli_client.py uses this library.
    "websockets>=12.0",

    # ── Request validation (FastAPI uses Pydantic internally) ─────────────────
    "pydantic>=2.6.0",

    # ── KLayout Python API (only needed when running inside KLayout) ──────────
    # For development/testing outside KLayout, this is not needed.
    # Comment out if you are running server.py standalone.
    # "klayout>=0.29.0",
]

[project.optional-dependencies]
klayout = [
    "klayout>=0.29.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",     # async HTTP test client for FastAPI
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
