[project]
name = "vlsi-agent"
version = "1.0.0"
description = "LangGraph-based VLSI EDA orchestration agent — KLayout chatbot + multi-module C++ backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ── HTTP server (chatbot API endpoint) ────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn>=0.29.0",

    # ── LangGraph + LangChain (orchestrator + module subgraphs) ──────────────
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",

    # ── Environment + config ──────────────────────────────────────────────────
    "python-dotenv>=1.0.0",

    # ── WebSocket client (MCP calls from Python to the C++ EDA daemon + HEA) ─
    "websockets>=12.0",

    # ── HTTP client (DRC gate calls to KLayout service) ───────────────────────
    "httpx>=0.27.0",

    # ── Request validation ────────────────────────────────────────────────────
    "pydantic>=2.6.0",

    # ── EU template rendering ─────────────────────────────────────────────────
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
klayout = [
    "klayout>=0.29.0",
]
rag = [
    # RAG memory service — ChromaDB + sentence-transformers
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
drc = [
    # DRC support — httpx already in core; no extra deps beyond klayout
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
